--- a/pom.xml
+++ b/pom.xml
@@ -109,12 +109,14 @@
 			    </execution>
 			  </executions>
 			  <configuration>
+			    <dockerHost>http://192.168.99.100:2375</dockerHost>
 			    <repository>${project.artifactId}</repository>
 			    <tag>${project.version}</tag>
 			    <contextDirectory>${project.build.directory}</contextDirectory>
 			    <buildArgs>
 			      <JAR_FILE>${project.build.finalName}.jar</JAR_FILE>
 			    </buildArgs>
+				<skipDocker>true</skipDocker>
 			  </configuration>
 			</plugin>
 			
