--- a/.gitignore
+++ b/.gitignore
@@ -36,3 +36,5 @@ target/test-classes/META-INF/docker/come.demo/springdockerk8s/repository
 target/test-classes/META-INF/docker/come.demo/springdockerk8s/image-name
 target/test-classes/META-INF/docker/come.demo/springdockerk8s/image-id
 k8s/start-app.log
+target/classes/META-INF/maven/come.demo/springdockerk8sdemo/pom.xml
+target/classes/META-INF/maven/come.demo/springdockerk8sdemo/pom.properties
