--- a/.gitignore
+++ b/.gitignore
@@ -38,3 +38,10 @@ target/test-classes/META-INF/docker/come.demo/springdockerk8s/image-id
 k8s/start-app.log
 target/classes/META-INF/maven/come.demo/springdockerk8sdemo/pom.xml
 target/classes/META-INF/maven/come.demo/springdockerk8sdemo/pom.properties
+target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/tag
+target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/repository
+target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/image-name
+target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/image-id
+target/springdockerk8sdemo-0.0.1.jar.original
+target/springdockerk8sdemo-0.0.1.jar
+target/springdockerk8sdemo-0.0.1-docker-info.jar
