update the code to run one shell script to do build, push and deploy all in one. Update code to integrate two java test.

--- a/springdocker-deployment.yaml
+++ b/springdocker-deployment.yaml
@@ -16,7 +16,7 @@ spec:
     spec:
       containers:
       - name: springdockerk8s
-        image: zefiber/zetest:springdockerfork8s_v7
+        image: zefiber/springdockerk8sdemo:0.0.5
         ports:
         - containerPort: 9090
         volumeMounts:
