update ignore file.

--- a/.gitignore
+++ b/.gitignore
@@ -1,50 +1,1 @@
-target/wrapper.sh
-target/test-classes/empi/test/TestUserController.class
-target/test-classes/empi/test/ApplicationTests.class
-target/springdockerk8s-0.0.1.jar.original
-target/springdockerk8s-0.0.1.jar
-target/springdockerk8s-0.0.1-docker-info.jar
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/inputFiles.lst
-target/maven-status/maven-compiler-plugin/testCompile/default-testCompile/createdFiles.lst
-target/maven-status/maven-compiler-plugin/compile/default-compile/inputFiles.lst
-target/maven-status/maven-compiler-plugin/compile/default-compile/createdFiles.lst
-target/maven-archiver/pom.properties
-target/docker/tag
-target/docker/repository
-target/docker/image-name
-target/docker/image-id
-target/docker/demo/springdockerk8s/0.0.1/tmp/docker-build.tar
-target/docker/demo/springdockerk8s/0.0.1/build/maven/springdockerk8s-0.0.1.jar
-target/docker/demo/springdockerk8s/0.0.1/build/Dockerfile
-target/docker/build.timestamp
-target/classes/scripts/schema1.sql
-target/classes/scripts/data1.sql
-target/classes/empi/models/User.class
-target/classes/empi/dao/UserRowMapper.class
-target/classes/empi/dao/UserRepository.class
-target/classes/empi/dao/UserRepository$1.class
-target/classes/empi/controllers/MainController.class
-target/classes/empi/configs/SwaggerConfig.class
-target/classes/empi/configs/AppConfig.class
-target/classes/empi/Application.class
-target/classes/META-INF/maven/come.demo/springdockerk8s/pom.xml
-target/classes/META-INF/maven/come.demo/springdockerk8s/pom.properties
-target/classes/META-INF/MANIFEST.MF
-target/Dockerfile
-target/test-classes/META-INF/docker/come.demo/springdockerk8s/tag
-target/test-classes/META-INF/docker/come.demo/springdockerk8s/repository
-target/test-classes/META-INF/docker/come.demo/springdockerk8s/image-name
-target/test-classes/META-INF/docker/come.demo/springdockerk8s/image-id
-k8s/start-app.log
-target/classes/META-INF/maven/come.demo/springdockerk8sdemo/pom.xml
-target/classes/META-INF/maven/come.demo/springdockerk8sdemo/pom.properties
-target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/tag
-target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/repository
-target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/image-name
-target/test-classes/META-INF/docker/come.demo/springdockerk8sdemo/image-id
-target/springdockerk8sdemo-0.0.1.jar.original
-target/springdockerk8sdemo-0.0.1.jar
-target/springdockerk8sdemo-0.0.1-docker-info.jar
-target/test-classes/empi/test/TestController.class
-target/classes/empi/models/LinkedListNode.class
-target/classes/application.properties
+target/
