--- a/src/main/resources/application.properties
+++ b/src/main/resources/application.properties
@@ -11,8 +11,9 @@ server.port = 9090
 #management.security.enabled = false
 
 #spring.datasource.url = jdbc:mysql://10.96.0.16:3306/empi?useSSL=false
-spring.datasource.url = jdbc:mysql://192.168.99.101:3306/empi?useSSL=false
+#spring.datasource.url = jdbc:mysql://192.168.99.101:3306/empi?useSSL=false
 #spring.datasource.url = jdbc:mysql://192.168.99.100:3306/empi?useSSL=false
+spring.datasource.url = jdbc:mysql://127.0.0.1:3306/empi?useSSL=false
 
 #spring.datasource.username = root
 spring.datasource.username = root
@@ -32,4 +33,4 @@ spring.datasource.initialize=true
 spring.datasource.schema=classpath:scripts/schema1.sql
 spring.datasource.data=classpath:scripts/data1.sql
 
-zeSignature = Dev ENV. Ze Wang & Huawei Liu
+zeSignature = Dev ENV. Ze Wang 
